# VaultX

vaultx_backend/: .env  Cargo.toml
vaultx_backend/src/: main.rs
vaultx_frontend/: package-lock.json  package.json  vite.config.js
vaultx_frontend/src/: App.css  App.jsx  index.css
vaultx_frontend/src/components/: Navbar.css  Navbar.jsx
vaultx_frontend/src/pages/: Balance.css  Balance.jsx  Crypto.css  Crypto.jsx  History.css  History.jsx  Home.css  Home.jsx  Send.css  Send.jsx  WalletConnect.jsx
