[package]
name = "vaultx_backend"
version = "0.1.0"
edition = "2024"

[dependencies]
dotenv = "0.15.0"
ethers = { version = "2.0.14",features = ["ws","rustls"] }
futures-util = "0.3.31"
reqwest = {version = "0.12.13",features = ["json"]}
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
thiserror = "2.0.12"
tokio = { version = "1.44.0", features = ["full"] }
warp = "0.3.7"
